# prompta

./: .env  .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: main.py
app/api/: batch.py  completions.py  health.py
app/core/: auth.py  config.py  errors.py  jobs.py  logging.py  middleware.py  response_builders.py
app/schemas/: __init__.py  batch.py  completions.py
app/services/: inference.py
