[project]
name = "prompta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "safetensors>=0.6.2",
    "transformers>=4.43,<5.0",
    "uvicorn[standard]>=0.35.0",
    "numpy>=1.26",
    "torch>=2.4",
    "sse-starlette>=2.1.0",
    "openai-harmony>=0.0.4",
]

[project.optional-dependencies]
hf = [
    "hf_transfer>=0.1.8",
]

[tool.uv]
dev-dependencies = []
